--- a/layouts/shortcodes/unity-webgl-player.html
+++ b/layouts/shortcodes/unity-webgl-player.html
@@ -75,3 +75,9 @@
         </script>
     </div>
 </div>
+<style>
+        .unity-canvas {
+            border: 1px solid gray;
+			background-color: rgb(128,128,128);
+        }
+    </style> 
