pumpkin attack added too

--- a/themes/color-your-world/layouts/partials/head.html
+++ b/themes/color-your-world/layouts/partials/head.html
@@ -259,3 +259,5 @@
 {{ end }}
 
 <script src="{{ $mainJS.Permalink }}" integrity="{{ $mainJS.Data.Integrity }}" crossorigin="anonymous"></script>
+
+<link rel="icon" href="{{ "favicon.png" | absURL }}" sizes="32x32" type="image/png">
